Change prefix and remove unused block

--- a/DOTtmux.conf
+++ b/DOTtmux.conf
@@ -4,15 +4,11 @@
 # Starting with options suggested at:
 #   https://robots.thoughtbot.com/a-tmux-crash-course
 
-# remap prefix to Control + a
-#set -g prefix C-a
-#unbind C-b
-#bind C-a send-prefix
+# Remap prefix to Ctrl-a
+unbind C-b
+set -g prefix C-a
+bind C-a send-prefix
 
-# force a reload of the config file
+# Force a reload of the config file
 unbind r
 bind r source-file ~/.tmux.conf
-
-# quick pane cycling
-unbind ^A
-bind ^A select-pane -t :.+
