--- a/DOTtmux.conf
+++ b/DOTtmux.conf
@@ -12,3 +12,7 @@ bind C-a send-prefix
 # Force a reload of the config file
 unbind r
 bind r source-file ~/.tmux.conf
+
+# Fix launching applications from tmux
+# See http://superuser.com/questions/834525
+set-option -g default-command "reattach-to-user-namespace -l bash"
