Aesthetic changes to .tmux.conf

--- a/DOTtmux.conf
+++ b/DOTtmux.conf
@@ -4,6 +4,22 @@
 # Starting with options suggested at:
 #   https://robots.thoughtbot.com/a-tmux-crash-course
 
+### Aesthetics
+
+# Status bar decoration
+set-option -g default-terminal "screen-256color"
+set-option -g status-utf8 on
+set-option -g status-attr default
+set-option -g status-bg colour235 #base02
+set-option -g status-fg colour136 #yellow
+
+# Pane border decoration
+set-option -g pane-border-fg colour235        #base02
+set-option -g pane-active-border-fg colour240 #base01
+
+
+### Bindings
+
 # Remap prefix to Ctrl-a
 unbind C-b
 set -g prefix C-a
@@ -12,6 +28,9 @@ bind C-a send-prefix
 # Force a reload of the config file
 unbind r
 bind r source-file ~/.tmux.conf
+
+
+### Fixes
 
 # Fix launching applications from tmux
 # See http://superuser.com/questions/834525
