--- a/DOTtmux.conf
+++ b/DOTtmux.conf
@@ -25,6 +25,10 @@ unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
+# Open new panes in $PWD
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
 # Force a reload of the config file
 unbind r
 bind r source-file ~/.tmux.conf
