--- a/DOTtmux.conf
+++ b/DOTtmux.conf
@@ -13,6 +13,10 @@ set-option -g status-attr default
 set-option -g status-bg colour235 #base02
 set-option -g status-fg colour136 #yellow
 
+# Activity monitoring
+setw -g monitor-activity on
+set -g visual-activity off
+
 # Pane border decoration
 set-option -g pane-border-fg colour235        #base02
 set-option -g pane-active-border-fg colour240 #base01
@@ -26,8 +30,10 @@ set -g prefix C-a
 bind C-a send-prefix
 
 # Open new panes in $PWD
-bind '"' split-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+bind | split-window -h -c "#{pane_current_path}"
+unbind '"'
+unbind %
 
 # Force a reload of the config file
 unbind r
