--- a/DOTtmux.conf
+++ b/DOTtmux.conf
@@ -35,6 +35,9 @@ bind | split-window -h -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
+# Set absolute pane width
+bind / resize-pane -x 80
+
 # Force a reload of the config file
 unbind r
 bind r source-file ~/.tmux.conf
