Minor binding tweaks

--- a/DOTtmux.conf
+++ b/DOTtmux.conf
@@ -29,6 +29,9 @@ unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
+# Create new named window
+bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
+
 # Open new panes in $PWD
 bind - split-window -v -c "#{pane_current_path}"
 bind | split-window -h -c "#{pane_current_path}"
@@ -40,7 +43,7 @@ bind / resize-pane -x 80
 
 # Force a reload of the config file
 unbind r
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 
 ### Mouse
