--- a/DOTtmux.conf
+++ b/DOTtmux.conf
@@ -32,6 +32,12 @@ bind C-a send-prefix
 # Create new named window
 bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
 
+# Easy pane switching with Alt-ARROW
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
 # Open new panes in $PWD
 bind - split-window -v -c "#{pane_current_path}"
 bind | split-window -h -c "#{pane_current_path}"
